@@ -26,7 +26,8 @@ rgl.material(
   size         = 3.0, 
   lwd          = 1.0,
   fog          = TRUE,
-  antialias    = FALSE,
+  point_antialias = FALSE,
+  line_antialias = FALSE,
   ...
 )
 material3d(...)
@@ -103,7 +104,8 @@ material3d(...)
     numeric, specifying the line width in pixels
   }
   \item{fog}{logical, specifying if fog effect should be applied on the corresponding shape}
-  \item{antialias}{logical, specifying if points and lines should be antialiased}
+  \item{point_antialias, line_antialias}{logical, specifying if points and lines 
+     should be antialiased}
   \item{...}{Any of the arguments above; see Details below.}
 }
 \details{
@@ -116,8 +118,8 @@ properties; see the examples below.
 
   The current implementation does not return parameters for textures.
   
-  If \code{antialias} is \code{TRUE}, points will be drawn as circles; otherwise, they
-will be drawn as squares.  Lines tend to appear heavier with antialiasing.
+  If \code{point_antialias} is \code{TRUE}, points will be drawn as circles; otherwise, they
+will be drawn as squares.  Lines tend to appear heavier with \code{line_antialias==TRUE}.
 
   The \code{material} member of the \code{\link{r3dDefaults}} list may be used to 
 set default values for material properties.
