@@ -10,5 +10,5 @@ LineSet::LineSet(Material& in_material, int in_nvertices, double* in_vertices, i
   : PrimitiveSet(in_material, in_nvertices, in_vertices, GL_LINES, 2, in_ignoreExtent)
 {
   material.lit = false;
-  if (material.isBlended()) blended = true;
+  if (material.line_antialias) blended = true;
 }
