@@ -30,7 +30,6 @@ public:
   void useColor(int index);
   void colorPerVertex(bool enable, int numVertices=0);
   bool isTransparent() const { return alphablend; }
-  bool isBlended() const { return antialias; }
 
   Color        ambient;
   Color        specular;
@@ -47,7 +46,8 @@ public:
   bool         lit;
   bool         fog;
   bool         useColorArray;
-  bool         antialias;
+  bool         point_antialias;
+  bool         line_antialias;
 };
 
 
