@@ -10,7 +10,7 @@ PointSet::PointSet(Material& in_material, int in_nvertices, double* in_vertices,
   : PrimitiveSet(in_material, in_nvertices, in_vertices, GL_POINTS, 1, in_ignoreExtent)
 {
   material.lit = false;
-  if (material.isBlended()) blended = true;
+  if (material.point_antialias) blended = true;
 } 
 
 
